--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -189,6 +189,80 @@
      list.push("P1-Villa-87,@Devendra Singh,@9773893352,@3,@Owner"); 
      list.push("P1-Villa-88,@Pankaj Chauhan,@9772525987,@4,@Owner"); 
      
+     list.push("P2-Villa-01,@MayankGoyal,@ 9460895514,@2,@Owner"); 
+        list.push("P2-Villa-02,@RaghavChoudhary,@9414887738,@2,@Owner"); 
+        list.push("P2-Villa-03,@HimmatSingh,@8452914699,@2,@Owner"); 
+        list.push("P2-Villa-04,@MeghrajKhandelwal,@9413342272,@2,@Owner"); 
+        list.push("P2-Villa-05,@ManjuSharma,@9414503196,@2,@Owner"); 
+        list.push("P2-Villa-06,@MonikaKheswani,@8003168660,@2,@Owner"); 
+        list.push("P2-Villa-07,@shishirNama,@9667867899,@2,@Owner"); 
+        list.push("P2-Villa-08,@SarojSharma,@9829155620,@2,@Owner"); 
+        list.push("P2-Villa-09,@Rajkumar Sharma,@9829155620,@2,@Owner"); 
+        list.push("P2-Villa-10,@Deokantasharma,@9829578079,@2,@Owner"); 
+        list.push("P2-Villa-11,@Payal,@8107448440,@2,@Owner"); 
+        list.push("P2-Villa-12,@RashmiJain,@7253918276,@2,@Owner"); 
+        list.push("P2-Villa-13,@AnkurSurana,@9910914400,@2,@Owner"); 
+        list.push("P2-Villa-14,@JitendraLalwani,@9829342758,@2,@Owner"); 
+        list.push("P2-Villa-15,@DropatiLalwani,@8290703832,@2,@Owner"); 
+        list.push("P2-Villa-16,@SeemaAsawat,@9904235800,@2,@Owner"); 
+        list.push("P2-Villa-17,@SampatiDevi Sharma,@9085549287,@2,@Owner"); 
+        list.push("P2-Villa-18,@AnshulKumar Goyal,@9414370892,@2,@Owner"); 
+        list.push("P2-Villa-19,@PraveenYadav,@9418691100,@2,@Owner"); 
+        list.push("P2-Villa-20,@NamitaKumawat,@9535368318,@2,@Owner"); 
+        list.push("P2-Villa-21,@MohanKhandelwal,@7597333055,@2,@Owner"); 
+        list.push("P2-Villa-22-A,@MohanKhandelwal,@7597333055,@2,@Owner"); 
+        list.push("P2-Villa-22-B,@LokeshKumar Bapna,@9414071427,@2,@Owner"); 
+        list.push("P2-Villa-23,@LokeshKumar Bapna,@9414071427,@2,@Owner"); 
+        list.push("P2-Villa-24,@DileepDhandel,@9871698451,@2,@Owner"); 
+        list.push("P2-Villa-25,@ManishaSharma,@9828558064,@2,@Owner"); 
+        list.push("P2-Villa-26,@PragyaSharma,@9880126051,@2,@Owner"); 
+        list.push("P2-Villa-27,@ManjuRohia,@9549141000,@2,@Owner"); 
+        list.push("P2-Villa-28,@NilamKumari Yadav,@7984479593,@2,@Owner"); 
+        list.push("P2-Villa-29,@SunitaLalwani,@9717895599,@2,@Owner"); 
+        list.push("P2-Villa-30,@DeepChand,@9782220091,@2,@Owner"); 
+        list.push("P2-Villa-31,@NavdeepKumar,@9717781488,@2,@Owner"); 
+        list.push("P2-Villa-34,@Monikashahani,@9636866877,@2,@Owner"); 
+        list.push("P2-Villa-35,@MonikaKhandelwal,@9413910715,@2,@Owner"); 
+        list.push("P2-Villa-37,@CharulRathore,@9672265495,@2,@Owner"); 
+        list.push("P2-Villa-38,@SumitPanwar,@9785071925,@2,@Owner"); 
+        list.push("P2-Villa-39,@Nikitasharma,@9494536822,@2,@Owner"); 
+        list.push("P2-Villa-40,@RajnishMachiwal,@9414359698,@2,@Owner"); 
+        list.push("P2-Villa-41,@HemantSingh,@9782276629,@2,@Owner"); 
+        list.push("P2-Villa-42,@TarunMundotiya,@9950510210,@2,@Owner"); 
+        list.push("P2-Villa-43,@SumanRathore,@9929937194,@2,@Owner"); 
+        list.push("P2-Villa-44,@VivekKumar,@9456525991,@2,@Owner"); 
+        list.push("P2-Villa-45,@MukulDixit,@9461079768,@2,@Owner"); 
+        list.push("P2-Villa-46,@Shailabhsharma,@9871234371,@2,@Owner"); 
+        list.push("P2-Villa-47,@Geeta Devi,@9414793657,@2,@Owner"); 
+        list.push("P2-Villa-48,@Shilpa Sharma,@7725932557,@2,@Owner"); 
+        list.push("P2-Villa-49,@Priti Gehlot,@9887386589,@2,@Owner"); 
+        list.push("P2-Villa-50,@NehaNigam,@9731403215,@2,@Owner"); 
+        list.push("P2-Villa-51,@SaurabhKumar,@9953776113,@2,@Owner"); 
+        list.push("P2-Villa-52,@SangeetaJain,@8447006420,@2,@Owner"); 
+        list.push("P2-Villa-53,@KamlaGupta,@7014238186,@2,@Owner"); 
+        list.push("P2-Villa-54,@JaiKhandelwal,@9782518315,@2,@Owner"); 
+        list.push("P2-Villa-55,@KritiMaheswari,@9935031104,@2,@Owner"); 
+        list.push("P2-Villa-56,@Pushpakumari,@7014031083,@2,@Owner"); 
+        list.push("P2-Villa-57,@Anamikajain,@8209150693,@2,@Owner"); 
+        list.push("P2-Villa-58,@AnamikaTak,@8560007099,@2,@Owner"); 
+        list.push("P2-Villa-59,@Sandeep,@8290135434,@2,@Owner"); 
+        list.push("P2-Villa-60,@Mahendrakumar arya,@9414001891,@2,@Owner"); 
+        list.push("P2-Villa-61,@awadeshkumar Mishra,@9571620111,@2,@Owner"); 
+        list.push("P2-Villa-62,@DeepaJai Singh,@8426993330,@2,@Owner"); 
+        list.push("P2-Villa-63,@AnkitaRani,@9892899769,@2,@Owner"); 
+        list.push("P2-Villa-64,@Girdharilal udai,@9660603082,@2,@Owner"); 
+        list.push("P2-Villa-65,@JitendraUdai,@9829587577,@2,@Owner"); 
+        list.push("P2-Villa-66,@Dineshkumar Kaushik,@9251401410,@2,@Owner"); 
+        list.push("P2-Villa-67,@AtulKumar,@9413394359,@2,@Owner"); 
+        list.push("P2-Villa-68,@DineshSain,@9928277240,@2,@Owner"); 
+        list.push("P2-Villa-69,@DeepakShahani,@9414556021,@2,@Owner"); 
+        list.push("P2-Villa-70,@Yogyatasingh,@7340044567,@2,@Owner"); 
+        list.push("P2-Villa-71,@PrettyRoy,@7600006547,@2,@Owner"); 
+        list.push("P2-Villa-72,@HariOm Meena,@8233618254,@2,@Owner"); 
+        list.push("P2-Villa-73,@YogeshKumar,@6378946222,@2,@Owner"); 
+        list.push("P2-Villa-74,@KaushalyaSaini,@9610336232,@2,@Owner"); 
+        list.push("P2-Villa-75,@RajatMathur,@9680024759,@2,@Owner"); 
+        list.push("P2-Villa-76,@NileshDangavach,@9425823532,@2,@Owner"); 
       
      generateTable(list)
     }
