--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -234,7 +234,7 @@
   list.push("	P1-Villa-84	,Tarun Sharda,,,,,,,,,,,,");
   list.push("	P1-Villa-85	,Pradeep Verma,1000,1000,1000,,,,,,,,,");
   list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-87	,Devendra Singh,,,,,,,,,,,,");
+  list.push("	P1-Villa-87	,Devendra Singh,,,,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-89	,Khem Chand Nagal,,,,,,,,,,,,");
   list.push("	P1-Villa-90	,Vivek Dubey,,,,,,,,,,,,");
