--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -178,7 +178,7 @@
   list.push("	P1-Villa-29	,Lokshita Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-30	,Peeyush Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-31	,Mahesh Tapariya,,,,,,,,,,,,");
-  list.push("	P1-Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-35	,Arpit Nogama,,,,,,,,,,,,");
@@ -211,9 +211,9 @@
   list.push("	P1-Villa-61	,Divanshi Dhanjani,,,,,,,,,,,,");
   list.push("	P1-Villa-62	,Lal Singh,0,0,0,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-63	,Yogesh Gupta,,,,,,,,,,,,");
-  list.push("	P1-Villa-64	,Sahil Meghnani,,,,,,,,,,,,");
+  list.push("	P1-Villa-64	,Sahil Meghnani,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-66	,Manju Gehlot,,,,,,,,,,,,");
+  list.push("	P1-Villa-66	,Manju Gehlot,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -254,11 +254,12 @@
   list.push("	P2-Villa-16	,Seema	Asawat,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,,,");
+  list.push("   P2-Villa-49 ,Priti Gehlot,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-71	,Pretty	Roy,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-72	,Hari Om Meena,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-73	,Yogesh Lakhera,,,,,,,2000,2000,2000,,,");
 
-	 generateTable(list)
+	 generateTable(list)  
 	}
 	
 	
