--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -224,7 +224,7 @@
   list.push("	P1-Villa-74	,Praveen Prajapat,,,,,,,,,,,,");
   list.push("	P1-Villa-75	,Archna Goswami,,,,,,,,,,,,");
   list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,,,,2000,2000,2000,,,");
-  list.push("	P1-Villa-77	,Devki Nandan Mathuriya,,,,,,,2000,2000,2000,,,");
+  list.push("	P1-Villa-77	,Devki Nandan Mathuriya,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-78	,Akshat Mangal,,,,,,,,,,,,");
   list.push("	P1-Villa-79	,Rahul Peswani,,,,,,,,,,,,");
   list.push("	P1-Villa-80	,Rahul Peswani,,,,,,,,,,,,");
@@ -234,7 +234,7 @@
   list.push("	P1-Villa-84	,Tarun Sharda,,,,,,,,,,,,");
   list.push("	P1-Villa-85	,Pradeep Verma,1000,1000,1000,,,,,,,,,");
   list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-87	,Devendra Singh,,,,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-87	,Devendra Singh,0,0,0,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-89	,Khem Chand Nagal,,,,,,,,,,,,");
   list.push("	P1-Villa-90	,Vivek Dubey,,,,,,,,,,,,");
