--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
 	   
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Upcoming Event: Krishna Janmashtami, 07 September 2023, Ganesh Chaturthi, 19 September 2023 </p>
+		<p> Upcoming Event: Ganesh Chaturthi, 19 September 2023 </p>
    </marquee>
   
 
@@ -127,8 +127,32 @@
 
 	 <p style="color: red">Next Meeting date not decided yet.</p> 
 	-->
-        <img class="NO-CACHE" data-src="img/JA.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
-		<p style="color: rgb(246, 72, 34)"><b>  Krishna Janmashtami, 07 September 2023   </b></p>
+		<p style="color: rgb(246, 72, 34)"><b>  Krishna Janmashtami event prize distribution on Ganesh Chaturthi, 19 September 2023   </b></p>
+<pre style="color: rgb(35, 9, 228)">
+		
+	जन्माष्टमी पर्व में संपन्न हुई प्रतियोगिताओ के परिणाम :
+
+		*1. फैंसी ड्रेस प्रतियोगिता 
+				1st- Sharvil
+				2nd- Raghav
+				3rd- Leeroy
+		
+		 *2. डांस प्रतियोगिता
+				1st- Pranjal
+				2nd- Atharv + Pragya (duet) 
+				3rd- Riddhima
+		
+		 *3. गायन प्रतियोगिता* 
+				1st- Manan
+				2nd- Abhi gya
+				3rd- Parth
+		
+		 *4. दही हांडी प्रतियोगिता* में सम्मिलित सभी प्रतिभागियों को पुरूस्कार से सम्मानित किया जाएगा. 
+
+		 *5  प्रतिभा पुरूस्कार (कार्यक्रमों के संचालन)
+		 		हिना सिंह
+
+		</pre>
 	<br>
 
 		<img class="NO-CACHE" data-src="img/GC.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
