--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -155,19 +155,19 @@
      list.push("P1-Villa-26,@Rakesh Kumar,@9079205061,@3,@Owner"); 
      list.push("P1-Villa-27,@Deepesh Sharma,@9829192929,@3,@Owner"); 
      list.push("P1-Villa-28,@Mohit Juneja,@7014643282,@4,@Owner"); 
-     list.push("P1-Villa-29,@LokshitaMathur,@9829050150,@2,@Owner"); 
-     list.push("P1-Villa-30,@PeeyushMathur,@9829050150,@2,@Owner"); 
-     list.push("P1-Villa-31,@MaheshTaparia,@8638470720,@2,@Owner"); 
+     list.push("P1-Villa-29,@Lokshita Mathur,@9829050150,@2,@Owner"); 
+     list.push("P1-Villa-30,@Peeyush Mathur,@9829050150,@2,@Owner"); 
+     list.push("P1-Villa-31,@Mahesh Taparia,@8638470720,@2,@Owner"); 
      list.push("P1-Villa-32,@Peeyush Verma,@9560055323,@3,@Owner"); 
      list.push("P1-Villa-33,@Prakash Joshi,@8128028832,@2,@Owner"); 
      list.push("P1-Villa-34,@Vijay Meena,@9667392585,@3,@Owner"); 
-     list.push("P1-Villa-35,@ArpitNogama,@9910207051,@2,@Owner"); 
-     list.push("P1-Villa-36,@HarishKumar Yadav,@8826779995,@2,@Owner"); 
+     list.push("P1-Villa-35,@Arpit Nogama,@9910207051,@2,@Owner"); 
+     list.push("P1-Villa-36,@Harish Kumar Yadav,@8826779995,@2,@Owner"); 
      list.push("P1-Villa-37,@Gajendra Sharma,@9166122226,@5,@Owner"); 
      list.push("P1-Villa-38,@ManishaSingh,@9887628512,@2,@Owner"); 
      list.push("P1-Villa-39,@Manish Salvi,@9024048874,@4,@Owner"); 
-     list.push("P1-Villa-40,@AnitaKanwar,@7014321489,@2,@Owner"); 
-     list.push("P1-Villa-41,@MonikaMittal,@7728895556,@2,@Owner"); 
+     list.push("P1-Villa-40,@Anita Kanwar,@7014321489,@2,@Owner"); 
+     list.push("P1-Villa-41,@Monika Mittal,@7728895556,@2,@Owner"); 
      list.push("P1-Villa-42,@Prakash Gaur,@9887444483,@2,@Owner"); 
      list.push("P1-Villa-43,@Arun Tripathi,@8003068888,@6,@Owner"); 
      list.push("P1-Villa-44,@Ravindra Verma,@9928309236,@4,@Owner"); 
@@ -175,13 +175,13 @@
      list.push("P1-Villa-46,@Vikas Mahala,@8561811965,@2,@Owner"); 
      list.push("P1-Villa-47,@Manoj Ji,@9460070338,@4,@Owner"); 
      list.push("P1-Villa-48,@R C Sharma ,@7737061033,@3,@Owner"); 
-     list.push("P1-Villa-49,@SunitaVerma,@9460123361,@2,@Owner"); 
+     list.push("P1-Villa-49,@Sunita Verma,@9460123361,@2,@Owner"); 
      list.push("P1-Villa-50,@Abhishek Garg,@9785352955,@3,@Owner"); 
      list.push("P1-Villa-51,@Jatin Kumar,@,@3,@Owner"); 
      list.push("P1-Villa-52,@Shailesh Bansal,@9461856524,@4,@Owner"); 
      list.push("P1-Villa-53,@Rohit Jain,@9828576337,@4,@Owner"); 
-     list.push("P1-Villa-54,@VinodKumar Garg,@9898386595,@2,@Owner"); 
-     list.push("P1-Villa-55,@RajKamal,@8890521834,@2,@Owner"); 
+     list.push("P1-Villa-54,@Vinod Kumar Garg,@9898386595,@2,@Owner"); 
+     list.push("P1-Villa-55,@Raj Kamal,@8890521834,@2,@Owner"); 
 
      list.push("P1-Villa-62,@Lal Singh,@,@2,@Owner"); 
      list.push("P1-Villa-63,@Yogesh Ji,@8583956466,@4,@Owner"); 
@@ -210,7 +210,31 @@
      list.push("P1-Villa-86,@Surendra Agrawal,@9414002683,@3,@Owner"); 
      list.push("P1-Villa-87,@Devendra Singh,@9773893352,@3,@Owner"); 
      list.push("P1-Villa-88,@Pankaj Chauhan,@9772525987,@4,@Owner"); 
-     
+     list.push("P1-Villa-88,@Pushpa Tomar,@9772525987,@2,@Owner"); 
+list.push("P1-Villa-89,@Khem Chand Nagal,@9610000231,@2,@Owner"); 
+list.push("P1-Villa-90,@Vivek Dubey,@9610000241,@2,@Owner"); 
+list.push("P1-Villa-91,@Rajendra Prasad Gupta,@8875026975,@2,@Owner"); 
+list.push("P1-Villa-92,@Anil Kumar Gupta,@8875012848,@2,@Owner"); 
+list.push("P1-Villa-93,@Manju Sexena,@9352997878,@2,@Owner"); 
+list.push("P1-Villa-94,@Rounak Rajendra Bhatt,@9653397949,@2,@Owner"); 
+list.push("P1-Villa-95,@Deepti Sharma,@8291048012,@2,@Owner"); 
+list.push("P1-Villa-96,@George Pal Singh,@9587865461,@2,@Owner"); 
+list.push("P1-Villa-97,@Surendra Kumawat,@8010051001,@2,@Owner"); 
+list.push("P1-Villa-98,@Hitesh Jain,@9251722324,@2,@Owner"); 
+list.push("P1-Villa-99,@Sakshi Singh,@9413249459,@2,@Owner"); 
+list.push("P1-Villa-100,@Akansha Garg,@9731123390,@2,@Owner"); 
+list.push("P1-Villa-101,@Laxmi Agarwal,@9660597792,@2,@Owner"); 
+list.push("P1-Villa-102,@Pratima Singh,@,@2,@Owner"); 
+list.push("P1-Villa-103,@Vandana Soni,@8094296135,@2,@Owner"); 
+list.push("P1-Villa-104,@Vandana Soni,@8094296135,@2,@Owner"); 
+list.push("P1-Villa-105,@Vandana Soni,@8094296135,@2,@Owner"); 
+list.push("P1-Villa-106,@Vandana Soni,@8094296135,@2,@Owner"); 
+list.push("P1-Villa-107,@Rita Soni,@8949349670,@2,@Owner"); 
+list.push("P1-Villa-108,@Shanky Munjal,@8010683360,@2,@Owner"); 
+list.push("P1-Villa-109,@Satish Kumar,@7597728629,@2,@Owner"); 
+list.push("P1-Villa-110,@Deepika Sharma,@9828165065,@2,@Owner"); 
+list.push("P1-Villa-111,@Rajat Kumar Sharma,@9828165065,@2,@Owner"); 
+
      list.push("P2-Villa-01,@MayankGoyal,@ 9460895514,@2,@Owner"); 
         list.push("P2-Villa-02,@RaghavChoudhary,@9414887738,@2,@Owner"); 
         list.push("P2-Villa-03,@HimmatSingh,@8452914699,@2,@Owner"); 
