--- a/OwnersRentDetails.html
+++ b/OwnersRentDetails.html
@@ -303,7 +303,7 @@ list.push("P1-Villa-111,@Rajat Kumar Sharma,@9828165065,@2,@Owner");
         list.push("P2-Villa-68,@Dinesh Sain,@9928277240,@2,@Owner"); 
         list.push("P2-Villa-69,@Deepak Shahani,@9414556021,@2,@Owner"); 
         list.push("P2-Villa-70,@Yogyata singh,@7340044567,@2,@Owner"); 
-        list.push("P2-Villa-71,@Pretty Roy,@7600006547,@2,@Owner"); 
+        list.push("P2-Villa-71,@Preety Roy,@7600006547,@2,@Owner"); 
         list.push("P2-Villa-72,@Hari Om Meena,@8233618254,@2,@Owner"); 
         list.push("P2-Villa-73,@Yogesh Kumar,@6378946222,@2,@Owner"); 
         list.push("P2-Villa-74,@Kaushalya Saini,@9610336232,@2,@Owner"); 
