--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -255,7 +255,7 @@
   list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,,,");
   list.push("   P2-Villa-49 ,Priti Gehlot,,,,,,,2000,2000,2000,,,");
-  list.push("	P2-Villa-71	,Pretty	Roy,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-71	,Preety	Roy,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-72	,Hari Om Meena,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-73	,Yogesh Lakhera,,,,,,,2000,2000,2000,,,");
 
