--- a/OtherActivity.html
+++ b/OtherActivity.html
@@ -69,8 +69,19 @@
         </form>
     </div>
 
-    <p style="color: rgb(72, 160, 5)"> Final Balnace at Villa -10, 3204 </p>
+    <p style="color: rgb(72, 160, 5)"> Final Balnace at Villa 10, 13742 </p>
     
+    <br>
+
+    <p> Janmashtami And Ganesh Chaturthi Ji 2023 - Collection</p>
+    <img src="img/JAC.jpg" width="633" height="1166" />
+    
+    <p></p>
+
+    <p> Janmashtami 2023 - Expenditure</p>
+    <img src="img/JAE.jpg" width="570" height="450" />
+
+    <p></p>
 <br>
 
     <p> Shiv Ji Abhishek 2023 - Collection</p>
