--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -150,19 +150,19 @@
 	function getYear2023(){
 	 var list = [];
   list.push("	P1-Villa-1	,Pooja Saxena,,,,,,,,,,,,");
-  list.push("	P1-Villa-4	,Pushpa & Bhupesh Saini,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-4	,Pushpa & Bhupesh Saini,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-6	,Hemant Kumar & Nikita,,,,,,,,,,,,");
   list.push("	P1-Villa-7	,Rahul & Anuja,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-8	,Anil & Ruchi Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-9	,Vinesh Sharma,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-10	,Jogendra & Sushma Sachdeva,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-10	,Jogendra & Sushma Sachdeva,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-11	,Poonam & Sundeep Mahala,1000,1000,1000,,,,,,,,,");
   list.push("	P1-Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-14	,Ayush Shandilya,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-15	,,,,,,,,,,,,,");
-  list.push("	P1-Villa-16	,Preeti Meena,,,,,,,,,,,,");
+  list.push("	P1-Villa-16	,Preeti Meena,,,,,,,2000,2000,2000,,,");
   list.push("	P1-Villa-17	,Khushi & Raju Khandelwal,,,,,,,,,,,,");
   list.push("	P1-Villa-18	,Pooja Saxena,,,,,,,,,,,,");
   list.push("	P1-Villa-19	,Kritika & Hitesh Sain,1000,1000,1000,,,,,,,,,");
@@ -171,16 +171,16 @@
   list.push("	P1-Villa-22	,Shivani Sanjay Sharma,,,,,,,,,,,,");
   list.push("	P1-Villa-23	,Akshy Saraswat,,,,,,,,,,,,");
   list.push("	P1-Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-25	,Pooja Khandelwal,,,,,,,,,,,,");
-  list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-25	,Pooja Khandelwal,,,,,,,2000,2000,2000,,,");
+  list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-27	,Murari Omprakash Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-29	,Lokshita Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-30	,Peeyush Mathur,,,,,,,,,,,,");
   list.push("	P1-Villa-31	,Mahesh Tapariya,,,,,,,,,,,,");
   list.push("	P1-Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-35	,Arpit Nogama,,,,,,,,,,,,");
   list.push("	P1-Villa-36	,Harish Kumar Yadav,,,,,,,,,,,,");
   list.push("	P1-Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -188,18 +188,18 @@
   list.push("	P1-Villa-39	,Manish Salvi,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-40	,Anita Kanwar,,,,,,,,,,,,");
   list.push("	P1-Villa-41	,Monika Mittal,,,,,,,,,,,,");
-  list.push("	P1-Villa-42	,Prakash & Rekha Gaur,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-42	,Prakash & Rekha Gaur,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-49	,Sunita Verma,,,,,,,,,,,,");
-  list.push("	P1-Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-54	,Vinod Garg,,,,,,,,,,,,");
   list.push("	P1-Villa-55	,Raj Kamal,,,,,,,,,,,,");
   list.push("	P1-Villa-56	,Kajor & Santosh Goyal,,,,,,,,,,,,");
@@ -213,7 +213,7 @@
   list.push("	P1-Villa-63	,Yogesh Gupta,,,,,,,,,,,,");
   list.push("	P1-Villa-64	,Sahil Meghnani,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
-  list.push("	P1-Villa-66	,Manju Gehlot,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-66	,Manju Gehlot,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
@@ -223,7 +223,7 @@
   list.push("	P1-Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-74	,Praveen Prajapat,,,,,,,,,,,,");
   list.push("	P1-Villa-75	,Archna Goswami,,,,,,,,,,,,");
-  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,,,,2000,2000,2000,,,");
+  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-77	,Devki Nandan Mathuriya,0,0,0,0,0,0,2000,2000,2000,,,");
   list.push("	P1-Villa-78	,Akshat Mangal,,,,,,,,,,,,");
   list.push("	P1-Villa-79	,Rahul Peswani,,,,,,,,,,,,");
@@ -233,8 +233,8 @@
   list.push("	P1-Villa-83	,Tarun Sharda,,,,,,,,,,,,");
   list.push("	P1-Villa-84	,Tarun Sharda,,,,,,,,,,,,");
   list.push("	P1-Villa-85	,Pradeep Verma,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-87	,Devendra Singh,0,0,0,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-87	,Devendra Singh,0,0,0,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000,,,,,,");
   list.push("	P1-Villa-89	,Khem Chand Nagal,,,,,,,,,,,,");
   list.push("	P1-Villa-90	,Vivek Dubey,,,,,,,,,,,,");
